Harden normals in bevel modifier alters mesh when checked multiple times #63071

Closed
opened 2019-03-29 01:10:04 +01:00 by Yegor · 6 comments

System Information
Operating system: Linux-4.15.0-46-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56

Blender Version
Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-25 23:15, hash: adfdae3fc2
Worked: (optional)

Short description of error
When you check and uncheck the Harden Normals checkbox it alters the mesh slightly and doesn't have two states, but rather three or more, as you keep clicking on the checkbox.
And when you change the width of the bevel it wiggles.
But may be it's a minor tradeoff of the new bevel algorithm, I don't know.

Exact steps for others to reproduce the error
Open the file. Click multiple times on the checkbox

harden_normals_bug.blend

**System Information** Operating system: Linux-4.15.0-46-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56 **Blender Version** Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-25 23:15, hash: `adfdae3fc2` Worked: (optional) **Short description of error** When you check and uncheck the Harden Normals checkbox it alters the mesh slightly and doesn't have two states, but rather three or more, as you keep clicking on the checkbox. And when you change the width of the bevel it wiggles. But may be it's a minor tradeoff of the new bevel algorithm, I don't know. **Exact steps for others to reproduce the error** Open the file. Click multiple times on the checkbox [harden_normals_bug.blend](https://archive.blender.org/developer/F6896878/harden_normals_bug.blend)
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov
Howard Trickey was assigned by Sebastian Parborg 2019-03-29 12:11:54 +01:00

Added subscriber: @Dspazio

Added subscriber: @Dspazio

Noticed that when "loop slide" is disabled, seems that "harden normals" works as intended.

Noticed that when "loop slide" is disabled, seems that "harden normals" works as intended.

This issue was referenced by 61fa6165df

This issue was referenced by 61fa6165dfe10f5b882fe647700a36ad76ab16a8
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

This was not really releated to harden_normals, but rather that the algorithm used when loop slide was enabled could give different results from run-to-run. I fixed that.

This was not really releated to harden_normals, but rather that the algorithm used when loop slide was enabled could give different results from run-to-run. I fixed that.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63071
No description provided.